--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="hello_world.jpeg" alt "Hello World"
+style="width:100%;max-width:2560px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
